--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^5.5.1",
     "@iconify-icon/react": "^1.0.8",
     "@iconify/react": "^4.1.1",
     "@tensorflow/tfjs": "^4.13.0",
@@ -21,9 +22,12 @@
     "react-webcam": "^7.2.0",
     "sweetalert2": "^11.10.1",
     "swr": "^2.2.4",
-    "tfjs": "^0.6.0"
+    "tfjs": "^0.6.0",
+    "vite-plugin-pwa": "^0.17.4",
+    "workbox": "^0.0.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.5.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
