--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss": "^8.4.31",
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "workbox-window": "^7.0.0"
   }
 }
